2015-03-31  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* config/s390/s390.c (s390_function_num_hotpatch_hw): Allow hotpatching
	nested functions.
	(s390_reorg): Adapt to new signature of s390_function_num_hotpatch_hw.
	(s390_asm_output_function_label): Adapt to new signature of
	s390_function_num_hotpatch_hw
	Optimise the code generating assembler output.
	Add comments to assembler file.

2015-03-27  Vladimir Makarov  <vmakarov@redhat.com>

	Backport from mainline
	2015-01-30  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/64688
	* lra-constraints.c (original_subreg_reg_mode): New.
	(simplify_operand_subreg): Try to simplify subreg of const.  Use
	original_subreg_reg_mode for it.
	(swap_operands): Update original_subreg_reg_mode.
	(curr_insn_transform): Set up original_subreg_reg_mode.

2015-03-26  Uros Bizjak  <ubizjak@gmail.com>

	PR target/65561
	* config/i386/sse.md (avx512f_vextract<shuffletype>32x4_1_maskm):
	Check operand 6 and operand 0 for equality.
	(vec_extract_lo_<mode>_maskm): Check operand 2 and operand 0
	for equality.
	(vec_extract_hi_<mode>_maskm): Ditto.

2015-03-26  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	Backport of r214242, r214254, and bug fix patches from mainline
	* config/rs6000/rs6000.c (context.h): New #include.
	(tree-pass.h): Likewise.
	(make_pass_analyze_swaps): New declaration.
	(rs6000_option_override): Register swap-optimization pass.
	(swap_web_entry): New class.
	(special_handling_values): New enum.
	(union_defs): New function.
	(union_uses): Likewise.
	(insn_is_load_p): Likewise.
	(insn_is_store_p): Likewise.
	(insn_is_swap_p): Likewise.
	(rtx_is_swappable_p): Likewise.
	(insn_is_swappable_p): Likewise.
	(chain_purpose): New enum.
	(chain_contains_only_swaps): New function.
	(mark_swaps_for_removal): Likewise.
	(swap_const_vector_halves): Likewise.
	(adjust_subreg_index): Likewise.
	(permute_load): Likewise.
	(permute_store): Likewise.
	(adjust_extract): Likewise.
	(adjust_splat): Likewise.